# waqt

./: .flake8  .gitattributes  .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  MCP_IMPLEMENTATION_SUMMARY.md  PORTABLE_IMPLEMENTATION_SUMMARY.md  README.md  UPDATER_FIX.md  alembic.ini  demo_mcp.py  init_db.py  install.ps1  install.sh  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  start.bat  start.ps1  start.sh
.devcontainer/: Dockerfile  README.md  devcontainer.json
.gemini/: GEMINI.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build.yaml  coverage.yml  dev-build.yaml  pages.yml  python-ci.yml  release.yaml
alembic/: README  env.py
alembic/versions/: 20260127_001_initial_initial_schema.py  20260131_14d61f9d15f7_add_templates_table.py
app/: __init__.py  models.py  routes.py  utils.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: base.html  dashboard.html  time_entry.html
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/glassmorphism_ui_20260109/: metadata.json  plan.md  spec.md
docs/: BUILD.md  DEV_CONTAINER.md  E2E_TESTING.md  MCP_GUIDE.md  UV_MIGRATION_GUIDE.md  documentation.html  index.html  installation.html  installation.md  usage.html  usage.md
docs-html/: documentation.html  index.html  installation.html  usage.html
docs-html/css/: style.css
docs-html/js/: main.js
docs-site/: README.md  contributing.md  index.md  installation.md  license.md  mcp-guide.md  usage.md
docs/css/: style.css
docs/guides/: BUILD.html  BUILD.md  DEV_CONTAINER.html  DEV_CONTAINER.md  E2E_TESTING.html  E2E_TESTING.md  MCP_GUIDE.html  MCP_GUIDE.md  UV_MIGRATION_GUIDE.md  installation.html  installation.md  usage.html  usage.md
docs/requirements/: 01-system-overview.md  02-system-capabilities.md  03-global-nfr.md  04-integration-patterns.md  05-security-architecture.md  06-data-strategy.md  07-deployment-strategy.md  08-quality-attributes.md
docs/requirements/cross-cutting/: configuration-management.md  error-handling-patterns.md  monitoring-logging.md  testing-strategy.md
docs/requirements/services/service-template/: api-contracts.md  data-model.md  dependencies.md  functional-requirements.md  nfr-specific.md  operations-guide.md  service-overview.md
docs/requirements/services/shared-contracts/: common-models.md
docs/requirements/user-experience/: user-journeys.md  ux-principles.md
examples/: demo_mcp.py
migrations/: migrate_add_categories.py  migrate_add_is_active.py  migrate_pause_feature.py  run_migrations.py
scripts/: seed_db.py  start.ps1  start.sh
src/waqt/: __init__.py  __main__.py  _version.py  cli.py  config.py  database.py  logging.py  mcp_server.py  models.py  process_manager.py  routes.py  services.py  updater.py  utils.py  wsgi.py  wsgi_server.py
src/waqt/scripts/: init_db.py
src/waqt/static/css/: style.css
src/waqt/static/js/: main.js
src/waqt/templates/: base.html  categories.html  dashboard.html  edit_time_entry.html  leave.html  reports.html  settings.html  templates.html  time_entry.html
src/waqtracker/: __init__.py  __main__.py  _version.py  cli.py  config.py  mcp_server.py  models.py  routes.py  updater.py  utils.py  wsgi.py
src/waqtracker/scripts/: init_db.py
src/waqtracker/static/css/: style.css
src/waqtracker/static/js/: main.js
src/waqtracker/templates/: base.html  dashboard.html  edit_time_entry.html  leave.html  reports.html  settings.html  time_entry.html
test-venv/: pyvenv.cfg
tests/: __init__.py  conftest.py  reproduce_timer_issue.py  test_app.py  test_calendar.py  test_categories.py  test_cli.py  test_cli_templates.py  test_config.py  test_csv_export.py  test_description_validation.py  test_e2e.py  test_export.py  test_import.py  test_leave_multiday.py  test_logging.py  test_main.py  test_mcp_features.py  test_mcp_integration.py  test_mcp_server.py  test_migrations.py  test_process_manager.py  test_routes_templates.py  test_seed.py  test_session_alert.py  test_settings_ui.py  test_templates.py  test_time_format.py  test_time_format_integration.py  test_time_parsing.py  test_timer_api.py  test_timer_pause.py  test_ui_process.py  test_updater.py
