[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "waqtracker"
version = "0.1.0"
description = "A portable Python time tracking application for managing work hours, overtime, vacation days, sick leaves, and work activities."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["time-tracking", "flask", "sqlite", "overtime", "work-hours"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Flask",
]

dependencies = [
    "Flask==3.0.0",
    "Flask-SQLAlchemy==3.1.1",
    "python-dateutil==2.8.2",
    "Werkzeug==3.0.1",
    "click>=8.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-cov==6.0.0",
    "pytest-playwright==0.6.2",
    "flake8==7.0.0",
    "black==24.1.1",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
waqt = "waqtracker.cli:main"
waqt-mcp = "waqtracker.mcp_server:main"

[project.urls]
Homepage = "https://github.com/GMouaad/waqt"
Repository = "https://github.com/GMouaad/waqt"
Issues = "https://github.com/GMouaad/waqt/issues"

[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks tests as end-to-end browser tests (requires Playwright)",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "venv/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
